syntax = "proto3";

                 package playercreateinfoSpellCustom;
service PlayercreateinfoSpellCustomService {
 rpc createPlayercreateinfoSpellCustom (PlayercreateinfoSpellCustomCreateInput) returns (PlayercreateinfoSpellCustom) {}
rpc playercreateinfoSpellCustoms (findManyParams) returns (stream PlayercreateinfoSpellCustom) {}
rpc playercreateinfoSpellCustom (PlayercreateinfoSpellCustomWhereUniqueInput) returns (PlayercreateinfoSpellCustom) {}
rpc updatePlayercreateinfoSpellCustom (PlayercreateinfoSpellCustomUpdateInput) returns (PlayercreateinfoSpellCustom) {}
rpc deletePlayercreateinfoSpellCustom (PlayercreateinfoSpellCustomWhereUniqueInput) returns (PlayercreateinfoSpellCustom) {} 
 }
message PlayercreateinfoSpellCustomCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayercreateinfoSpellCustom {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayercreateinfoSpellCustomWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayercreateinfoSpellCustomUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message findManyParams {

};